...
        }}
      />
      <Tabs.Screen
        name="cash"
        options={{
          tabBarAccessibilityLabel: "Cash",
          tabBarButtonTestID: "tab-cash",
          title: "Cash",
        }}
      />
      <Tabs.Screen
        name="settings"
        options={{
...
